[gd_scene load_steps=18 format=3 uid="uid://i0lvu51wl6eu"]

[ext_resource type="Script" uid="uid://bghp75o0f86ub" path="res://Scripts/Troop.gd" id="1_8vntb"]

[sub_resource type="Gradient" id="Gradient_8vntb"]
colors = PackedColorArray(0.205117, 0.205117, 0.205117, 0.32549, 0.190762, 0.190762, 0.190762, 0.713726)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_xydxm"]
gradient = SubResource("Gradient_8vntb")
width = 129
height = 260

[sub_resource type="Gradient" id="Gradient_xydxm"]
offsets = PackedFloat32Array(0.0163934, 1)
colors = PackedColorArray(0.817462, 0, 0.152658, 1, 1, 0.575268, 0.540867, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1nqw0"]
gradient = SubResource("Gradient_xydxm")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_46snm"]
texture = SubResource("GradientTexture2D_1nqw0")
texture_margin_top = 20.0

[sub_resource type="LabelSettings" id="LabelSettings_6hwjb"]
font_size = 32
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Gradient" id="Gradient_a48gr"]
offsets = PackedFloat32Array(0, 0.97541)
colors = PackedColorArray(1, 0.246809, 0.172426, 1, 1, 0.594071, 0.359179, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_cqprc"]
gradient = SubResource("Gradient_a48gr")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1iwp8"]
texture = SubResource("GradientTexture2D_cqprc")
texture_margin_top = 20.0

[sub_resource type="LabelSettings" id="LabelSettings_74k4m"]
font_size = 32
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Gradient" id="Gradient_xuvde"]
offsets = PackedFloat32Array(0, 0.97541)
colors = PackedColorArray(0.153085, 0.570947, 1, 1, 0.728764, 0.6491, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_fkrhb"]
gradient = SubResource("Gradient_xuvde")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3ys17"]
texture = SubResource("GradientTexture2D_fkrhb")
texture_margin_top = 20.0

[sub_resource type="Gradient" id="Gradient_fkrhb"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_jjswv"]
gradient = SubResource("Gradient_fkrhb")
width = 512

[sub_resource type="Gradient" id="Gradient_sti2e"]
colors = PackedColorArray(0.74978, 0.74978, 0.74978, 1, 1, 1, 1, 1)

[node name="Troop" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_8vntb")

[node name="Sprite" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -512.0
offset_top = -684.0
offset_right = 512.0
offset_bottom = 604.0
grow_vertical = 0
pivot_offset = Vector2(512, 644)

[node name="StatBox" type="TextureRect" parent="Sprite"]
layout_mode = 2
texture = SubResource("GradientTexture2D_xydxm")

[node name="StatList" type="VBoxContainer" parent="Sprite/StatBox"]
layout_mode = 2
offset_left = 12.0
offset_top = 68.0
offset_right = 1012.0
offset_bottom = 198.0
theme_override_constants/separation = 35

[node name="HealthBar" type="ProgressBar" parent="Sprite/StatBox/StatList"]
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxTexture_46snm")
show_percentage = false

[node name="Label" type="Label" parent="Sprite/StatBox/StatList/HealthBar"]
layout_mode = 2
offset_left = -1.0
offset_top = -38.0
offset_right = 111.0
offset_bottom = 7.0
text = "Health"
label_settings = SubResource("LabelSettings_6hwjb")
horizontal_alignment = 1

[node name="DamageBar" type="ProgressBar" parent="Sprite/StatBox/StatList"]
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxTexture_1iwp8")
show_percentage = false

[node name="Label" type="Label" parent="Sprite/StatBox/StatList/DamageBar"]
layout_mode = 2
offset_left = -1.0
offset_top = -38.0
offset_right = 135.0
offset_bottom = 7.0
text = "Damage"
label_settings = SubResource("LabelSettings_74k4m")
horizontal_alignment = 1

[node name="SpeedBar" type="ProgressBar" parent="Sprite/StatBox/StatList"]
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxTexture_3ys17")
show_percentage = false

[node name="Label" type="Label" parent="Sprite/StatBox/StatList/SpeedBar"]
layout_mode = 2
offset_left = -1.0
offset_top = -38.0
offset_right = 102.0
offset_bottom = 7.0
text = "Speed"
label_settings = SubResource("LabelSettings_74k4m")
horizontal_alignment = 1

[node name="ImageDisplay" type="TextureRect" parent="Sprite"]
layout_mode = 2

[node name="CloudParticles" type="CPUParticles2D" parent="Sprite"]
position = Vector2(512, 644)
emitting = false
amount = 256
texture = SubResource("GradientTexture2D_jjswv")
lifetime = 2.0
one_shot = true
explosiveness = 1.0
lifetime_randomness = 0.5
emission_shape = 3
emission_rect_extents = Vector2(512, 512)
direction = Vector2(0, -1)
gravity = Vector2(0, 0)
initial_velocity_min = 1000.0
initial_velocity_max = 1000.0
linear_accel_max = 25.0
damping_min = 300.0
damping_max = 300.0
color_ramp = SubResource("Gradient_sti2e")
hue_variation_min = -1.0
hue_variation_max = 1.0

[node name="APIRequest" type="HTTPRequest" parent="."]

[connection signal="request_completed" from="APIRequest" to="." method="_on_api_request_completed"]
